--- a/src/EcsRx.MonoGame.RogueLike2d/EcsRx.MonoGame.RogueLike2d.csproj
+++ b/src/EcsRx.MonoGame.RogueLike2d/EcsRx.MonoGame.RogueLike2d.csproj
@@ -12,6 +12,11 @@
   <ItemGroup>
     <PackageReference Include="MonoGame.Content.Builder" Version="3.7.0.4" />
     <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
+    <PackageReference Include="System.Reactive" Version="4.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EcsRx.MonoGame\EcsRx.MonoGame\EcsRx.MonoGame.csproj" />
   </ItemGroup>
 
 </Project>
