--- a/src/EcsRx.MonoGame/EcsRx.MonoGame/EcsRx.MonoGame.csproj
+++ b/src/EcsRx.MonoGame/EcsRx.MonoGame/EcsRx.MonoGame.csproj
@@ -9,11 +9,16 @@
       <PackageReference Include="EcsRx.Infrastructure" Version="1.2.3" />
       <PackageReference Include="EcsRx.Infrastructure.Ninject" Version="1.2.3" />
       <PackageReference Include="EcsRx.MicroRx" Version="1.2.3" />
-      <PackageReference Include="EcsRx.ReactiveData" Version="1.2.3" />
       <PackageReference Include="EcsRx.Systems" Version="1.2.3" />
       <PackageReference Include="EcsRx.Views" Version="1.2.3" />
       <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
       <PackageReference Include="Ninject" Version="3.3.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="System.Reactive, Version=4.1.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263">
+        <HintPath>..\..\..\..\..\..\Users\leepr\.nuget\packages\system.reactive\4.1.0\lib\netstandard2.0\System.Reactive.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
