--- a/src/EcsRx.MonoGame/EcsRx.MonoGame/EcsRx.MonoGame.csproj
+++ b/src/EcsRx.MonoGame/EcsRx.MonoGame/EcsRx.MonoGame.csproj
@@ -5,12 +5,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="EcsRx" Version="1.2.3" />
-      <PackageReference Include="EcsRx.Infrastructure" Version="1.2.3" />
-      <PackageReference Include="EcsRx.Infrastructure.Ninject" Version="1.2.3" />
-      <PackageReference Include="EcsRx.MicroRx" Version="1.2.3" />
-      <PackageReference Include="EcsRx.Systems" Version="1.2.3" />
-      <PackageReference Include="EcsRx.Views" Version="1.2.3" />
+      <PackageReference Include="EcsRx" Version="2.0.3" />
+      <PackageReference Include="EcsRx.Infrastructure" Version="2.0.3" />
+      <PackageReference Include="EcsRx.Infrastructure.Ninject" Version="2.0.3" />
+      <PackageReference Include="EcsRx.MicroRx" Version="2.0.3" />
+      <PackageReference Include="EcsRx.ReactiveData" Version="2.0.3" />
+      <PackageReference Include="EcsRx.Systems" Version="2.0.3" />
+      <PackageReference Include="EcsRx.Views" Version="2.0.3" />
       <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
       <PackageReference Include="Ninject" Version="3.3.4" />
     </ItemGroup>
