Have updated to v3 of EcsRx

--- a/src/EcsRx.MonoGame.RogueLike2d/EcsRx.MonoGame.RogueLike2d.csproj
+++ b/src/EcsRx.MonoGame.RogueLike2d/EcsRx.MonoGame.RogueLike2d.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
@@ -10,6 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EcsRx.Plugins.ReactiveSystems" Version="3.2.18" />
+    <PackageReference Include="EcsRx.Plugins.Views" Version="3.2.18" />
     <PackageReference Include="MonoGame.Content.Builder" Version="3.7.0.4" />
     <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
     <PackageReference Include="System.Reactive" Version="4.1.0" />
