--- a/src/EcsRx.MonoGame/EcsRx.MonoGame/EcsRx.MonoGame.csproj
+++ b/src/EcsRx.MonoGame/EcsRx.MonoGame/EcsRx.MonoGame.csproj
@@ -1,17 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="EcsRx" Version="2.0.3" />
-      <PackageReference Include="EcsRx.Infrastructure" Version="2.0.3" />
-      <PackageReference Include="EcsRx.Infrastructure.Ninject" Version="2.0.3" />
-      <PackageReference Include="EcsRx.MicroRx" Version="2.0.3" />
-      <PackageReference Include="EcsRx.ReactiveData" Version="2.0.3" />
-      <PackageReference Include="EcsRx.Systems" Version="2.0.3" />
-      <PackageReference Include="EcsRx.Views" Version="2.0.3" />
+      <PackageReference Include="EcsRx" Version="3.2.18" />
+      <PackageReference Include="EcsRx.Infrastructure" Version="3.2.18" />
+      <PackageReference Include="EcsRx.Infrastructure.Ninject" Version="3.2.18" />
+      <PackageReference Include="EcsRx.MicroRx" Version="3.2.18" />
+      <PackageReference Include="EcsRx.Plugins.ReactiveSystems" Version="3.2.18" />
+      <PackageReference Include="EcsRx.Plugins.Views" Version="3.2.18" />
+      <PackageReference Include="EcsRx.ReactiveData" Version="3.2.18" />
       <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
       <PackageReference Include="Ninject" Version="3.3.4" />
     </ItemGroup>
