Updated project structure
Added appveyor config

--- a/src/EcsRx.MonoGame.RogueLike2d/EcsRx.MonoGame.RogueLike2d.csproj
+++ b/src/EcsRx.MonoGame.RogueLike2d/EcsRx.MonoGame.RogueLike2d.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EcsRx.MonoGame\EcsRx.MonoGame\EcsRx.MonoGame.csproj" />
+    <ProjectReference Include="..\EcsRx.MonoGame\EcsRx.MonoGame.csproj" />
   </ItemGroup>
 
 </Project>
