--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,9 @@
-version: 0.3.{build}
+version: 0.4.{build}
 branches:
   only:
   - master
   - build-test
-image: Previous Visual Studio 2017
+image: Visual Studio 2019
 configuration: Release
 dotnet_csproj:
   patch: true
