--- a/src/EcsRx.MonoGame.RogueLike2d/EcsRx.MonoGame.RogueLike2d.csproj
+++ b/src/EcsRx.MonoGame.RogueLike2d/EcsRx.MonoGame.RogueLike2d.csproj
@@ -2,18 +2,32 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+    <RollForward>Major</RollForward>
+    <PublishReadyToRun>false</PublishReadyToRun>
+    <TieredCompilation>false</TieredCompilation>
   </PropertyGroup>
-
+  
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
+  </PropertyGroup>
+  
   <ItemGroup>
-    <MonoGameContentReference Include="**\*.mgcb" />
+    <None Remove="Icon.ico" />
+    <None Remove="Icon.bmp" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Include="Icon.ico" />
+    <EmbeddedResource Include="Icon.bmp" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="EcsRx.Plugins.ReactiveSystems" Version="6.0.131" />
-    <PackageReference Include="EcsRx.Plugins.Views" Version="6.0.131" />
-    <PackageReference Include="MonoGame.Content.Builder" Version="3.7.0.9" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.8.0.2" />
+    <PackageReference Include="EcsRx.Plugins.ReactiveSystems" Version="6.1.142" />
+    <PackageReference Include="EcsRx.Plugins.Views" Version="6.1.142" />
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
@@ -21,4 +35,8 @@
     <ProjectReference Include="..\EcsRx.MonoGame\EcsRx.MonoGame.csproj" />
   </ItemGroup>
 
+  <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
+    <Message Text="Restoring dotnet tools" Importance="High" />
+    <Exec Command="dotnet tool restore" />
+  </Target>
 </Project>
