--- a/src/EcsRx.MonoGame/EcsRx.MonoGame.csproj
+++ b/src/EcsRx.MonoGame/EcsRx.MonoGame.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Version>0.0.0</Version>
         <Title>EcsRx.MonoGame</Title>
         <Authors>Grofit (LP)</Authors>
@@ -13,14 +13,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="EcsRx" Version="6.0.131" />
-      <PackageReference Include="EcsRx.Infrastructure" Version="6.0.131" />
+      <PackageReference Include="EcsRx" Version="6.1.142" />
+      <PackageReference Include="EcsRx.Infrastructure" Version="6.1.142" />
       <PackageReference Include="EcsRx.Infrastructure.Ninject" Version="4.1.97" />
-      <PackageReference Include="EcsRx.Plugins.ReactiveSystems" Version="6.0.131" />
-      <PackageReference Include="EcsRx.Plugins.Views" Version="6.0.131" />
+      <PackageReference Include="EcsRx.Plugins.ReactiveSystems" Version="6.1.142" />
+      <PackageReference Include="EcsRx.Plugins.Views" Version="6.1.142" />
       <PackageReference Include="EcsRx.ReactiveData" Version="4.1.97" />
-      <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.8.0.2" />
-      <PackageReference Include="Ninject" Version="3.3.4" />
+      <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
+      <PackageReference Include="Ninject" Version="3.3.6" />
       <PackageReference Include="System.Reactive" Version="5.0.0" />
     </ItemGroup>
 	
