--- a/src/EcsRx.MonoGame.RogueLike2d/EcsRx.MonoGame.RogueLike2d.csproj
+++ b/src/EcsRx.MonoGame.RogueLike2d/EcsRx.MonoGame.RogueLike2d.csproj
@@ -24,8 +24,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="EcsRx.Plugins.ReactiveSystems" Version="7.0.158" />
-    <PackageReference Include="EcsRx.Plugins.Views" Version="7.0.158" />
+    <PackageReference Include="EcsRx.Plugins.ReactiveSystems" Version="7.0.164" />
+    <PackageReference Include="EcsRx.Plugins.Transforms" Version="7.0.164" />
+    <PackageReference Include="EcsRx.Plugins.Views" Version="7.0.164" />
+    <PackageReference Include="EcsRx.ReactiveData" Version="4.1.97" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="System.Reactive" Version="6.0.0" />
