--- a/src/EcsRx.MonoGame.Examples.Asteroids/EcsRx.MonoGame.Examples.Asteroids.csproj
+++ b/src/EcsRx.MonoGame.Examples.Asteroids/EcsRx.MonoGame.Examples.Asteroids.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <PackageReference Include="Comora" Version="0.5.0" />
+    <PackageReference Include="EcsRx.Plugins.Computeds" Version="7.1.181" />
     <PackageReference Include="EcsRx.Plugins.ReactiveSystems" Version="7.1.181" />
     <PackageReference Include="EcsRx.Plugins.Transforms" Version="7.1.181" />
     <PackageReference Include="EcsRx.Plugins.Views" Version="7.1.181" />
